Fix NullPointerException bugs and add Java 17 compatibility
- Add defensive null checks in BoardLibrary.java (is_used, remove_via_padstack, get_mirrored_via_padstack)
- Add null checks in DsnFile.java for plane autoroute settings
- Add null checks in SpecctraSesFileWriter.java for board/library/communication
- Add null checks in Network.java for routing board and library
- Add null checks in RulesFile.java for library padstacks
- Add null checks in Wiring.java for board and library
- Fix Java 17 compatibility: threadId() -> getId() in RoutingJobSchedulerActionThread.java
- Fix Java 17 compatibility: HttpClient try-with-resources in VersionChecker.java
- Update build.gradle to use Java 17 instead of Java 21

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>